update lands usage and do some tests