@@ -1,18 +1,20 @@
 package magic.core.cards;
 
-import magic.core.cards.creatures.Creature;
 import magic.core.cards.creatures.Abilities;
+import magic.core.cards.creatures.Creature;
+import magic.core.cards.lands.BasicLands;
 import magic.core.cards.magics.attachments.DamageLifeBoost;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
+import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertFalse;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 
 
 /**
@@ -20,46 +22,46 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
  */
 public class CreatureTest {
 
+    private Creature creature;
+
     public CreatureTest() {
     }
 
-    @Test
-    public void testDefaultLackeys() {
-        assertNotNull(Creature.SAMPLES);
-        assertFalse(Creature.SAMPLES.isEmpty());
+    @BeforeEach
+    public void setUp() {
+        this.creature = new Creature("mocked-creature", 3, 2, List.of(BasicLands.FOREST),
+                Collections.emptyList(),
+                Collections.emptyList());
     }
 
     @Test
     public void testToString() {
-        System.out.println(Creature.SAMPLES.stream()
-                .findFirst()
-                .orElse(null));
+        System.out.println(creature);
     }
 
     @Test
     public void testBuffsAreImmutable() {
-        Creature creature = new Creature("Joe", 10, 4, 5, Arrays.asList(Abilities.HASTE),
+        Creature creature = new Creature("Joe", 10, 4,
+                List.of(BasicLands.PLAINS), List.of(Abilities.HASTE),
                 Collections.emptyList());
 
-        Collection<Abilities> buffs = creature.getAbilities();
-        buffs.add(Abilities.PROVOKE);
-        buffs.add(Abilities.DOUBLE_STRIKE);
+        Collection<Abilities> buffs = creature.abilities();
 
-        assertEquals(creature.getAbilities().size(), 1);
-        assertTrue(creature.getAbilities().contains(Abilities.HASTE));
+        assertThrows(UnsupportedOperationException.class, () -> {
+            buffs.add(Abilities.PROVOKE);
+            buffs.add(Abilities.DOUBLE_STRIKE);
+        });
+
+        assertEquals(creature.abilities().size(), 1);
+        assertTrue(creature.abilities().contains(Abilities.HASTE));
     }
 
     @Test
     public void testLackeyWithAttachments() {
-        DamageLifeBoost a = DamageLifeBoost.DEFAULT_CARDS.stream()
-                .findFirst()
-                .orElse(null);
+        DamageLifeBoost a = new DamageLifeBoost("mocked-damage", 2, 0, List.of(BasicLands.PLAINS));
 
-
-        assertEquals(2, a.damageIncrease());
-        assertEquals(0, a.lifeIncrease());
-
-        Creature l = new Creature("Joe", 53, 31, 1, Collections.emptyList(), Arrays.asList(a));
+        Creature l = new Creature("Joe", 53, 31,
+                List.of(BasicLands.PLAINS), Collections.emptyList(), List.of(a));
 
         assertEquals(53 + 2, l.effectiveDamage());
         assertEquals(31 + 0, l.effectiveLife());
